--- a/llm01.ipynb
+++ b/llm01.ipynb
@@ -171,9 +171,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "Python (test)",
    "language": "python",
-   "name": "python3"
+   "name": "test"
   },
   "language_info": {
    "name": "python",
